tests/ui/parse/inner_attr_misplaced.stderr
error[RX0008]: expected an outer attribute (inner attributes are only allowed at the top of the file), found `#`
 --> $DIR/parse/inner_attr_misplaced.rx:3:1
  |
3 | #![feature(closures)] //~ ERROR RX0008
  | ^ expected an outer attribute (inner attributes are only allowed at the top of the file)
