tests/ui/parse/inner_attr_misplaced.rx
//@ spec: RXS-0011, RXS-0012
fn first() {}
#![feature(closures)] //~ ERROR RX0008
fn second() {}
